; ModuleID = '/home/carl/AnghaBench/git/extr_bisect.c_read_bisect_paths.c'
source_filename = "/home/carl/AnghaBench/git/extr_bisect.c_read_bisect_paths.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }
%struct.argv_array = type { i32 }

@STRBUF_INIT = common dso_local global %struct.strbuf zeroinitializer, align 4
@.str = private unnamed_addr constant [2 x i8] c"r\00", align 1
@EOF = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [38 x i8] c"Badly quoted content in file '%s': %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.argv_array*)* @read_bisect_paths to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @read_bisect_paths(%struct.argv_array* %0) #0 {
  %2 = alloca %struct.argv_array*, align 8
  %3 = alloca %struct.strbuf, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  store %struct.argv_array* %0, %struct.argv_array** %2, align 8
  %6 = bitcast %struct.strbuf* %3 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %6, i8* align 4 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 4, i1 false)
  %7 = call i8* (...) @git_path_bisect_names()
  store i8* %7, i8** %4, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = call i32* @xfopen(i8* %8, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i32* %9, i32** %5, align 8
  br label %10

10:                                               ; preds = %28, %1
  %11 = load i32*, i32** %5, align 8
  %12 = call i64 @strbuf_getline_lf(%struct.strbuf* %3, i32* %11)
  %13 = load i64, i64* @EOF, align 8
  %14 = icmp ne i64 %12, %13
  br i1 %14, label %15, label %29

15:                                               ; preds = %10
  %16 = call i32 @strbuf_trim(%struct.strbuf* %3)
  %17 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %3, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.argv_array*, %struct.argv_array** %2, align 8
  %20 = call i64 @sq_dequote_to_argv_array(i32 %18, %struct.argv_array* %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %28

22:                                               ; preds = %15
  %23 = call i32 @_(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.1, i64 0, i64 0))
  %24 = load i8*, i8** %4, align 8
  %25 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %3, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @die(i32 %23, i8* %24, i32 %26)
  br label %28

28:                                               ; preds = %22, %15
  br label %10

29:                                               ; preds = %10
  %30 = call i32 @strbuf_release(%struct.strbuf* %3)
  %31 = load i32*, i32** %5, align 8
  %32 = call i32 @fclose(i32* %31)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i8* @git_path_bisect_names(...) #2

declare dso_local i32* @xfopen(i8*, i8*) #2

declare dso_local i64 @strbuf_getline_lf(%struct.strbuf*, i32*) #2

declare dso_local i32 @strbuf_trim(%struct.strbuf*) #2

declare dso_local i64 @sq_dequote_to_argv_array(i32, %struct.argv_array*) #2

declare dso_local i32 @die(i32, i8*, i32) #2

declare dso_local i32 @_(i8*) #2

declare dso_local i32 @strbuf_release(%struct.strbuf*) #2

declare dso_local i32 @fclose(i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
